<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hola_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="25dp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:text="@string/hola_text" />

        <ImageView
            android:id="@+id/image_wh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_whatsapp" />

        <TextView
            android:id="@+id/pregunta_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="20dp"
            android:textSize="18dp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/pregunta_text" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/opcion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcion1" />

            <RadioButton
                android:id="@+id/opcion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcion2" />

            <RadioButton
                android:id="@+id/opcion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcion3" />

            <RadioButton
                android:id="@+id/opcion4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcion4" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_answer"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_answer" />

    </LinearLayout>

</FrameLayout>